ins/iptables
# Generated by iptables-save v1.4.7 on Fri Jan 13 17:25:20 2012
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [11:1113]
-A INPUT -p tcp -m tcp --dport 20000 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -p udp -m udp --dport 1194 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT 
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A FORWARD -i tun+ -j ACCEPT 
-A FORWARD -i ppp+ -j ACCEPT 
-A FORWARD -i tap+ -j ACCEPT 
COMMIT
# Completed on Fri Jan 13 17:25:20 2012
# Generated by iptables-save v1.4.7 on Fri Jan 13 17:25:20 2012
*nat
:PREROUTING ACCEPT [54:7808]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A POSTROUTING -o eth0 -j MASQUERADE  
COMMIT
# Completed on Fri Jan 13 17:25:20 2012
